Revision history for cif-dbi-perl v1.

0.99.04 2012-08-XX
    - renamed cif_feeds to cif_feed in various places
    - added url_whitelisting (whooops...)

0.99.03 2012-07-31
    - added cif_archive_vaccum script
    - cleaned up feed table vaccum
    - cleaned up apikeys library a bit
    - added key expiration to profiles

0.99.02 2012-06-26
    - misc bugfixes
    - split out feed support to handle new hashing data-model

0.99.01 2012-04-27
    - initial release
    - split cif-dbi out into it's own lib
    - simplified the storage model
    - added compression (google-compress-snappy)
    - leveraging Iodef::Pb (google protocol buffers) instead of JSON for IODEF
    - re-factored most of the "index tables" to be hash lookups (with the exception of ipv4/6 addrs)
    - split out "WebAPI" into a generic router platform (cif-router-perl)